[project]
name = "sample-programs"
version = "2025.03.10"
description = "Sample Programs in Every Programming Language"
readme = ".github/README.md"
requires-python = ">=3.9,<4.0"
license = "MIT"

dependencies = [
    "ronbun (>=0.9.0,<0.10.0)",
    "glotter2 (>=0.11.0,<0.12.0)"
]

# Initiator of the collection
authors = [
    {name = "Jeremy Grifski", email = "jeremy.grifski@therenegadecoder.com"}
]

# Major contributors along the way
maintainers = [
    {name = "auroq"},
    {name = "rzuckerm"},
    {name = "stuin"},
    {name = "noah11012"},
    {name = "heksterb"},
    {name = "msj2"},
    {name = "chrboe"},
    {name = "2Clutch"},
    {name = "alope107"}
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
glotter2 = {develop = true}
[tool.pytest.ini_options]
console_output_style = "count"
